# Machine-Berekenbaarheid-Groeps-Opdracht

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GUI/: HTTP10Checker.cpp  HTTP10Checker.h  ImageLoader.cpp  ImageLoader.h  ProtocolGui.cpp  ProtocolGui.h
GUI/panels/: Components.h  Panel_Generator.cpp  Panel_Generator.h  Panel_InputEditor.cpp  Panel_InputEditor.h  Panel_ProtocolSelector.cpp  Panel_ProtocolSelector.h  Panel_Results.cpp  Panel_Results.h
grammers/: CFG.cpp  CFG.h  CFG_CYK.cpp  CFG_CYK.h  PDA.cpp  PDA.h
parsers/: SLR.cpp  SLR.h
protocols/: Protocol.h  SemanticResult.h  Token.h
protocols/HTTP10/: HTTP10MessageGenerator.cpp  HTTP10MessageGenerator.h  HTTP10MessageOptions.h  HTTP10Protocol.cpp  HTTP10Protocol.h  HTTP10Tokenizer.cpp  HTTP10Tokenizer.h  HTTP10_semantics.cpp  HTTP10_semantics.h  HTTPrequest.cpp  HTTPrequest.h  HTTPtoken.h  http10.json  http10_original.json  http10_pda.json
protocols/HTTP10/cases/: empty_header_value.txt  invalid_header_format.txt  invalid_version.txt  missing_method.txt  missing_uri.txt  no_headers.txt  valid_request_1.txt  valid_request_2.txt  weird_characters.txt
protocols/HTTP10/tests/: HTTP10tests.cpp  HTTP10tests.h  test_http10_main.cpp
utils/imgui/: ImGuiTheme.h
utils/imgui/backends/: imgui_impl_glfw.cpp
visualization/: DotGenerator.cpp  DotGenerator.h  HTTPTreeBuilder.cpp  HTTPTreeBuilder.h  ParseTree.h  test_visualization.cpp
